Add discount filter
